// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
Array [
  "_id",
  "accountStatus",
  "emailAddress",
  "followersCount",
  "followingCount",
  "ratingsTotal",
  "reviewsCount",
  "sharedCount",
  "tokens",
  "types",
  "username",
]
`;

exports[` 2`] = `
Array [
  "_id",
  "accountStatus",
  "emailAddress",
  "followersCount",
  "followingCount",
  "ratingsTotal",
  "reviewsCount",
  "sharedCount",
  "tokens",
  "types",
  "username",
]
`;

exports[` 3`] = `
Array [
  "_id",
  "accountStatus",
  "emailAddress",
  "followersCount",
  "followingCount",
  "ratingsTotal",
  "reviewsCount",
  "sharedCount",
  "tokens",
  "types",
  "username",
]
`;

exports[` 4`] = `
Array [
  "_id",
  "accountStatus",
  "emailAddress",
  "followersCount",
  "followingCount",
  "ratingsTotal",
  "reviewsCount",
  "sharedCount",
  "tokens",
  "types",
  "username",
]
`;

exports[` 5`] = `
Array [
  "_id",
  "accountStatus",
  "emailAddress",
  "followersCount",
  "followingCount",
  "ratingsTotal",
  "reviewsCount",
  "sharedCount",
  "tokens",
  "types",
  "username",
]
`;

exports[`## Product APIs # GET /api/products/ should get all products (default from designers) 1`] = `
Array [
  "_id",
  "accountStatus",
  "profilePic",
  "shippingAddress",
  "types",
  "username",
]
`;

exports[`## Product APIs # GET /api/products/ should get all products (from resellers) 1`] = `
Array [
  "_id",
  "accountStatus",
  "shippingAddress",
  "types",
  "username",
]
`;

exports[`## Product APIs # GET /api/products/:uuid should get an existing product: product 1`] = `
Array [
  "_id",
  "categoryIds",
  "createdAt",
  "currency",
  "description",
  "photoURIs",
  "price",
  "quantity",
  "seller",
  "status",
  "tags",
  "typeIds",
  "updatedAt",
  "uuid",
  "weight",
]
`;

exports[`## Product APIs # GET /api/products/:uuid should get an existing product: product.seller 1`] = `
Array [
  "_id",
  "accountStatus",
  "displayName",
  "profilePic",
  "shippingAddress",
  "types",
  "username",
]
`;
